<resources>
    <string name="app_name" translatable="false">InventarioWH</string>
    <string name="btn_retroceder" translatable="false">Retroceder</string>
    <string name="hint_buscar" translatable="false">Buscar Productos&#8230;</string>
    <string name="boton_Agregar" translatable="false">Agregar producto</string>
    <string name="hint_nombre_producto" translatable="false">Nombre del producto</string>
    <string name="hint_categoria_producto" translatable="false">Categoría</string>
    <string name="btn_guardar" translatable="false">Guardar Producto</string>
    <string name="productos">0 Productos</string>
    <string name="NombreTienda">WESTHAM</string>
    <string name="api_key">AIzaSyAiohZHfyXkUn3DjxugSJM7pmwXfSW2S6I</string>
    <string name="lista_proveedores">Lista de Proveedores</string>
    <string name="Titulo_movimientos">MOVIMIENTOS</string>
    <string name="St_ganancia">GANANCIA</string>
    <string name="St_hoy">HOY</string>
    <string name="St_mes">MES</string>
    <string name="St_total">TOTAL</string>
    <string name="bt_nueva_venta">NUEVA VENTA</string>
    <string name="direccionPV">Dirección</string>
    <string name="rucPV">RUC</string>
    <string name="raz_nom_proveedor">Razón social o Nombre del Proveedor</string>
    <string name="telefonoPV">Teléfono</string>
    <string name="ubicacion_actualPV">Ubicacion actual</string>
    <string name="latitudPV">Latitud</string>
    <string name="longituPV">Longitud</string>
    <string name="guardar_proveedorPV">Guardar Proveedor</string>
    <string name="registrar_proveedorPV">Registrar Proveedor</string>
    <string name="seleccionar_una_categoria">Seleccionar una categoria</string>
    <string name="color">Color</string>
    <string name="talla">Talla</string>
    <string name="descripci_n">Descripción</string>
    <string name="todo">TODO</string>
    <string name="nombre">Nombre..</string>
    <string name="precio_de_compra">Precio de compra</string>
    <string name="nombre_del_producto">Nombre del producto</string>
    <string name="categoria">Categoria</string>
    <string name="stock">Stock</string>
    <string name="precio_de_venta">Precio de venta</string>
    <string name="sku">SKU</string>
    <string name="bt_agregar_producto">Agregar producto</string>
    <string name="seleccionar_una_categoriaEdit">Seleccionar una categoria</string>
    <string name="coloredit">Color</string>
    <string name="tallaedit">Talla</string>
    <string name="actualizar_producto">ACTUALIZAR PRODUCTO</string>
    <string name="descripci_nedit">Descripción</string>
    <string name="nombreedit">Nombre..</string>
    <string name="precio_de_compraedit">Precio de compra</string>
    <string name="nombre_del_productoedit">Nombre del producto</string>
    <string name="stockedit">Stock</string>
    <string name="categoriaedit">Categoria</string>
    <string name="precio_de_ventaedit">Precio de venta</string>
    <string name="skuedit">SKU</string>
    <string name="bteditar_producto">Editar producto</string>
    <string name="direcci_nedit">Dirección</string>
    <string name="rucedit">RUC</string>
    <string name="raz_n_social_o_nombre_del_proveedoredit">Razón social o Nombre del Proveedor</string>
    <string name="tel_fonoedit">Teléfono</string>
    <string name="ubicacion_actualbtEdit">Ubicacion actual</string>
    <string name="latitudedit">Latitud</string>
    <string name="longitudedit">Longitud</string>
    <string name="actualizar_proveedoredit">Actualizar Proveedor</string>
    <string name="tituloeditar_proveedoredit">Editar Proveedor</string>
    <string name="agregar_productoBtMain">AGREGAR PRODUCTO</string>
    <string name="bt_agregar_proveedor">Agregar Proveedor</string>
    <string name="ajustes">Ajustes</string>
    <string name="gesti_n_de_cat_logo">Gestión de Catálogo</string>
    <string name="idioma">Idioma</string>
    <string name="preferencias">Preferencias</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="editar_categor_as">Editar Categorías</string>
    <string name="editar_colores">Editar Colores</string>
    <string name="editar_tallas">Editar Tallas</string>
    <string name="modo_oscuro">Modo Oscuro</string>
    <string name="espa_ol">Español</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="total">TOTAL:</string>
    <string name="agregar_al_carrito">AGREGAR AL CARRITO</string>
    <string name="buscar">Buscar</string>
    <string name="registrar_venta">REGISTRAR VENTA</string>
    <string name="digita_la_cantidad">Digita la Cantidad</string>
    <string name="precio">Precio:</string>
    <string name="producto">Producto:</string>
    <string name="stockVenta">Stock:</string>
    <string name="realizar_venta">Realizar venta</string>
    <string name="nombre_o_sku">Nombre o SKU</string>
    <string name="productos_0ItemVenta">Productos: 0</string>
    <string name="editarproveedor">Editar</string>
    <string name="configuracion">Configuracion</string>
    <string name="inventario">Inventario</string>
    <string name="movimientos">Movimientos</string>
    <string name="proveedores">Proveedores</string>
</resources>